# shameless

./: Cargo.toml  README.md  example_usage.sh  justfile
.github/workflows/: ci.yml  pages.yml
docs/: .gitignore  app.js  index.html
src/: cli.rs  codec.rs  commands.rs  lib.rs  main.rs  wasm.rs
src/domain/: config.rs  mod.rs  share_count.rs  share_index.rs  threshold.rs
tests/: integration.rs  proptests.rs
tests/proptests/: shamir39.rs  split_combine.rs
