[package]
name = "shameless"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core crypto dependencies (WASM-compatible)
blahaj = "0.6"
bip39 = "2.0"
anyhow = "1.0"
zeroize = { version = "1.8", features = ["alloc"] }
crc = "3.2"

# CLI dependencies (optional for WASM builds)
clap = { version = "4.5", features = ["derive"], optional = true }
rpassword = { version = "7.3", optional = true }
atty = { version = "0.2", optional = true }

# WASM dependencies
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# WASM-specific dependencies (only for wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:rpassword", "dep:atty"]
